# kyoupuro

./: .gitignore  README.md
ABC062/: A_Grouping.py  B_PictureFrame.py  C_ChocolateBar.py  C_correct.py  D_correct.py
ABC064/: A_RGBCards.py  B_TravelingAtCoDeerProblem.py  C_correct.py
ABC070/: A_PalindromicNumber.py  B_TwoSwitches.py  C_MultipleClocks.py  C_correct.py  D_correct.py
ABC117/: A.py  B.py  D.py  D_correct.py
ABC118/: B.py
ABC119/: B.py  C.py  C2.py  C_correct.py  D.py  D_correct.py  tes.py
ABC120/: A.py  C.py  D.py  D_correct.py
AISing2019/: A.py  C_correct.py
AtcoderBeginnersSelection/: CardGameForTwo.py  Coins.py  Daydream.py  Otoshidama_bad.py  Product.py
AtcoderBeginnersSelection/novice/: ABC007_C.py  ARC031_B.py  ATC001_A.py  README.md
CADDib/: A.py  C.py  D.py
C_ARC/arc033_3/: arc033_3.py
DPC5/: A.py  README.md
D_ABC/: ABC072_D.py
KEYENCE2019/: A.py  C.py
algorithm/: BFS.py  BIT.py  BinarySearchTree.py  Prime_numbers.py  PriorityQueue.py  SegmentTree.py  SqrtDecomposedList.py  Tree.py  UnionFind.py  bisect_for_reversedlist.py  cumsum.py  cython_templete.pyx  decimal.py  graph_algorithm.py  grid_utils.py  iter_p_adic.py  linkedlist.py  lowest_link.py  matrix.py  meguru_bisect.py  mod_utils.py  run_length_encoding.py  scipy_csgraph.py  sortedlist.py  stack_based_dfs.py  strings.py
contests/ABC064/: C_ColorfulLeaderboard.py  D_Insertion.py
contests/ABC088/: D.py
contests/ABC094/: A_CatsandDogs.py  B_ TollGates.py  C_ManyMedians.py  D_BinomialCoefficients.py
contests/ABC117/: C.py
contests/ABC118/: A.py  C.py  D.py  D_correct.py
contests/ABC119/: A.py
contests/ABC120/: B.py
contests/ABC121/: A.py  B.py  C.py  D.py  D2.py
contests/ABC122/: A.py  B.py  C.py  D.py  D_correct.py
contests/ABC123/: A.py  B.py  C.py  D.py  D2.py  D_correct.py  D_correct2.py  D_correct3.py  D_correct4.py  D_correct5.py
contests/ABC124/: A.py  B.py  C.py  D.py  D_correct_accum.py  D_correct_syakutori.py
contests/ABC125/: A.py  B.py  C.py  C_correct.py  D.py
contests/ABC126/: A.py  B.py  C.py  D.py  D_correct.py
contests/ABC128/: A.py  B.py  C.py  D.py
contests/ABC143/: A.py  B.py  C.py  D.py  F.py
contests/ABC144/: A.py  B.py  C.py  D.py
contests/ABC145/: A.py  B.py  C.py  D.py  F.py
contests/ABC146/: A.py  B.py  C.py  D.py  F.py
contests/ABC147/: B.py  D.py  D_correct.py
contests/ABC148/: A.py  B.py  C.py  D.py  E.py  E_TLE.py  F.py
contests/ABC149/: A.py  B.py  C.py  D.py  E_naive.py  E_uso.py
contests/ABC151/: A.py  B.py  C.py  C2.py  D.py  D2.py  F.py
contests/ABC152/: A.py  B.py  C.py  D.py  D2.py
contests/ABC154/: A.py  B.py  C.py  D.py  E.py  E_correct.py  E_correct2.py
contests/ABC155/: A.py  B.py  C.py  D.py  E.py  E_correct.py  E_correct2.py
contests/ABC156/: A.py  B.py  C.py  D.py  E.py  F.py
contests/AGC030/: A.py  B.py
contests/AGC031/: A.py  B.py
contests/AGC032/: A.3.py  A.4.py  A_correct.py  B.py
contests/AGC033/: A.1.py  A.2.py  A.3.py  A.5.py  A.py
contests/AGC034/: A.py  B.py
contests/AGC039/: A.py  B.py
contests/AGC040/: A.py
contests/AGC041/: a.py  b.py
contests/AHC062/: AGENTS.md  Cargo.toml  README.md  index.html  problem_description.txt  vis.html  vite.config.js
contests/AHC063/: .gitignore  AGENTS.md  Cargo.toml  README.md  index.html  problem_description.txt  vis.html  vite.config.js
contests/AHC063/.agents/skills/make-visualizer/: SKILL.md
contests/AHC063/notes/: ensemble.md  ideas.md  important_properties.md  inventory_idea.md  notations.md
contests/AHC063/results/: score_summary.csv
contests/AHC063/samples/: input_manual_01.txt  output_manual_01.txt
contests/AHC063/scripts/: eval.sh  eval_jsonl.py  gen_tools.sh  rebuild_score_detail.sh  run.sh  vis_tools.sh
contests/AHC063/scripts/adhoc/: analyze_nmc_basic.py  analyze_nmc_cross_tables.py  analyze_selector_nmc.py  analyze_threeway_budget.py  analyze_v004_case.sh  analyze_v005_case.sh  analyze_v104_case.py  analyze_v104_case.sh  analyze_v107_case.sh  analyze_v109_case.py  bench_bite_detection.sh  bench_food_cow.sh  bench_food_cow_beam.sh  bench_internal_colors.sh  bench_internal_colors_beam.sh  bench_internal_food.sh  bench_internal_food_beam.sh  bench_prefix_repair.sh  check_v000_template.sh  investigate_case.sh  investigate_v109.sh  microbench_step_v123_v125.rs  microbench_v123_v124_state_repr.rs  poc_v109_transport.py  profile_v123_v125_counts.py  summarize_eval_jsonl.py
contests/AHC063/scripts/lib/: resolve_bin_src.py
contests/AHC063/src/: profile_counts.rs
contests/AHC063/src_vis/: main.js
contests/AHC063/tools/: README.html  README.md
contests/AHC063/tools/src/: lib.rs  vis.rs
contests/AHC063/wasm/: Cargo.toml
contests/AHC063/wasm/src/: impl_vis.rs
contests/AISing2019/: B.py  C.py
contests/AWC0001Beta/: AGENTS.md  pyproject.toml
contests/CADDib/: B.py
contests/DPC5/: B.py
contests/KEYENCE2019/: B.py  D.py
contests/M_solutions2019/: A.py  B.py  C.py
contests/Tenka1BC2019/: A.py  B.py  C.1.py  C.py  D.py
contests/_template_heuristic/: .gitignore  AGENTS.md  README.md  index.html  package.json  problem_description.txt  vite.config.js
contests/_template_heuristic/.agents/skills/make-ahc-visualizer/assets/template/wasm/: Cargo.toml
contests/_template_heuristic/.agents/skills/make-ahc-visualizer/assets/template/wasm/src/: impl_vis.rs  lib.rs
contests/abc157/: a.py  b.py  c.py  d.py  e.py  e2.py  f.py
contests/abc158/: a.py  b.py  c.py  d.py  e.py  f.py
contests/abc159/: a.py  b.py  c.py  d.py  e.py  f.py
contests/abc160/: a.py  b.py  c.py  d.py  e.py  f.py
contests/abc161/: a.py  b.py  c.py  d.py  d2.py  d3.py  e.py  f.py
contests/agc043/: a.py  a2.py  b.py
contests/hitachi2020/: a.py  b.py  c.py
contests/keyence2020/: A.py  B.py  C.py  D.py
contests/masters2026-qual/: .gitignore  AGENTS.md  README.md  index.html  package.json  problem_description.txt
contests/nikkei2019_2/: A.py  B.py
contests/panasonic2020/: a.py  b.py  c.py  d.py  d2.py  e.py  f.py
nikkei2019/: A.py  B.py  C.py  C_correct.py
templetes/: cython.pyx  python_with_numpy.py
(+1572 files in other folders)
